CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
project(VE280)

enable_testing()

add_subdirectory(project_2016/p1)
add_subdirectory(project_2017/p1)
add_subdirectory(project_2017/p2)
add_subdirectory(project_2017/p3)
#add_subdirectory(project_2016/p2)
#add_subdirectory(project_2016/p3)
#add_subdirectory(project_2016/p4)
#add_subdirectory(project_2016/p5)


add_subdirectory(libs/googletest)