CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
project(VE280)

enable_testing()

add_subdirectory(projects/p1/integers-v1)
add_subdirectory(projects/p1/integers-v2)
add_subdirectory(projects/p1/hangman)

add_subdirectory(projects/p2/recursion-v1)
add_subdirectory(projects/p2/recursion-v2)
add_subdirectory(projects/p2/simple-twitter)

add_subdirectory(projects/p3/simple-world)
add_subdirectory(projects/p3/hard-world)

add_subdirectory(projects/p4/blackjack)
add_subdirectory(projects/p4/quarto)
add_subdirectory(projects/p4/huffman)

add_subdirectory(projects/p5/list-v1)
add_subdirectory(projects/p5/list-v2)

